styles.css
* {
	font-family: 'Poppins';
}

/* Header */

/* Container */

header .container-fluid {
	padding: 0 !important;
}

/* Navigation Bar */

.navbar {
	background-color: #007BFF !important;
}

.navbar-brand , .nav-link {
	color: #BFDEFF !important;
}

.navbar-brand:hover , .nav-link:hover {
	color: white !important;
}

.active {
	font-weight: 600 !important;
	color: white !important;
}

/* Media Queries */

@media (max-width: 990px) {

	.nav-item:nth-of-type(3) {
		padding-left: 16px !important;
	}

}

.landingdivi, .landingdivtext {
	background-color: white !important;
	border-radius: 10px;
	display: inline-block;
	color: #007BFF !important;
	width: 23%;
	align-content: center;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	margin: 5vh;
}

.landingimg {
	width: 94%;
	margin: 3%;
}

.landingbutton {
	border: none;
	text-align: center;
	background-color: #007BFF !important;
	color: white !important;
	width: 94%;
	height: 50px;
	margin: 1% 3% 3% 4%;
}

.landingdivtext {
	width: 50%;
	padding: 1%;
}

.lh {
	margin: 5px;
}

.lp {
	margin: 5px;
	margin-top: 10px;
	color: black;
}

.li {
	color: #007BFF !important;
	text-decoration: none;
	display: inline-block;
	width: 100%;
	text-align: right;
	margin-right: 5%;
}

